# WeChatClient

./: .gitignore  CMakeLists.txt  ChatPanel.cpp  ChatPanel.h  ChatPanel.ui  LoginPanel.cpp  LoginPanel.h  LoginPanel.ui  README.md  apimanager.cpp  apimanager.h  benchmark.py  dbmanager.cpp  dbmanager.h  friendbutton.cpp  friendbutton.h  friendbutton.ui  friendrequestdialog.cpp  friendrequestdialog.h  friendrequestdialog.ui  friendrequestitem.cpp  friendrequestitem.h  friendrequestitem.ui  main.cpp  mainwindow.cpp  mainwindow.h  messagedialog.cpp  messagedialog.h  messagedialog.ui  messageitem.cpp  messageitem.h  messageitem.ui  server.py  server_ai.py  userinfo.h
