cmake_minimum_required(VERSION 3.16)

project(WeChatClient VERSION 0.1 LANGUAGES CXX)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets Sql Network WebSockets)


set(PROJECT_SOURCES
    main.cpp

    LoginPanel.cpp
    LoginPanel.h
    LoginPanel.ui

    ChatPanel.cpp
    ChatPanel.h
    ChatPanel.ui
    
    mainwindow.cpp
    mainwindow.h
    mainwindow.ui
    
    dbmanager.cpp
    dbmanager.h
    
    apimanager.cpp
    apimanager.h
    
    friendrequestdialog.cpp
    friendrequestdialog.h
    friendrequestdialog.ui
    
    userinfo.h
)

if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
    qt_add_executable(WeChatClient
        MANUAL_FINALIZATION
        ${PROJECT_SOURCES}
        friendrequestdialog.h friendrequestdialog.cpp friendrequestdialog.ui
        friendrequestitem.h friendrequestitem.cpp friendrequestitem.ui
        friendbutton.h friendbutton.cpp friendbutton.ui
        friendbutton.h friendbutton.cpp friendbutton.ui
        messageitem.h messageitem.cpp messageitem.ui

    )
# Define target properties for Android with Qt 6 as:
#    set_property(TARGET WeChatClient APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
#                 ${CMAKE_CURRENT_SOURCE_DIR}/android)
# For more information, see https://doc.qt.io/qt-6/qt-add-executable.html#target-creation
else()
    if(ANDROID)
        add_library(WeChatClient SHARED
            ${PROJECT_SOURCES}
        )
# Define properties for Android with Qt 5 after find_package() calls as:
#    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
    else()
        add_executable(WeChatClient
            ${PROJECT_SOURCES}
        )
    endif()
endif()

target_link_libraries(WeChatClient PRIVATE
    Qt${QT_VERSION_MAJOR}::Widgets
    Qt${QT_VERSION_MAJOR}::Sql
    Qt${QT_VERSION_MAJOR}::Network
    Qt${QT_VERSION_MAJOR}::WebSockets
)

# Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
# If you are developing for iOS or macOS you should consider setting an
# explicit, fixed bundle identifier manually though.
if(${QT_VERSION} VERSION_LESS 6.1.0)
  set(BUNDLE_ID_OPTION MACOSX_BUNDLE_GUI_IDENTIFIER com.example.WeChatClient)
endif()
set_target_properties(WeChatClient PROPERTIES
    ${BUNDLE_ID_OPTION}
    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
    MACOSX_BUNDLE TRUE
    WIN32_EXECUTABLE TRUE
)

include(GNUInstallDirs)
install(TARGETS WeChatClient
    BUNDLE DESTINATION .
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)

if(QT_VERSION_MAJOR EQUAL 6)
    qt_finalize_executable(WeChatClient)
endif()
